Add App Initializer to check token in localstorage

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -61,7 +61,7 @@
               </p-password>
             </div>
           </div>
-          <div class="p-col-12">{{disableSubmit}}
+          <div class="p-col-12">
             <p-button label="Login" (onClick)="submitForm()" [disabled]="disableSubmit || !loginForm.valid">
             </p-button>
           </div>
