--- a/src/app/auth/components/login/login.component.css
+++ b/src/app/auth/components/login/login.component.css
@@ -1,4 +1,5 @@
-:host ::ng-deep .p-password input {
+:host ::ng-deep .p-password input,
+:host ::ng-deep .p-password.p-component {
   width: 100%;
 }
 
