--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -7,24 +7,38 @@
           <div class="p-col-12">
             <div class="p-inputgroup">
               <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-              <input type="text" pInputText placeholder="Username" formControlName="username" />
+              <input
+                type="text"
+                pInputText
+                placeholder="Username"
+                formControlName="username"
+              />
             </div>
             <div *ngIf="f.username.errors && f.username.dirty">
               <small class="p-error" *ngIf="f.username.errors?.required">
-                Username is Required.</small>
+                Username is Required.</small
+              >
               <small class="p-error" *ngIf="f.username.errors?.minlength">
-                Username minimum length is 3.</small>
+                Username minimum length is 3.</small
+              >
               <small class="p-error" *ngIf="f.username.errors?.maxlength">
-                Username maximum length is 254.</small>
+                Username maximum length is 254.</small
+              >
               <small class="p-error" *ngIf="f.username.errors?.email">
-                Invalid Email Format.</small>
+                Invalid Email Format.</small
+              >
             </div>
           </div>
           <div class="p-col-12">
-            <div class="p-inputgroup .p-fluid">
+            <div class="p-inputgroup">
               <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
               <!-- <input type="text" pInputText placeholder="Username" /> -->
-              <p-password placeholder="Password" [ngStyle]="{ width: '100%' }" formControlName="password">
+              <p-password
+                placeholder="Password"
+                [ngStyle]="{ width: '100%' }"
+                formControlName="password"
+                [inputStyle]="{ width: '100%' }"
+              >
                 <ng-template pTemplate="header">
                   <h6>Pick a password</h6>
                 </ng-template>
@@ -41,19 +55,21 @@
                     <li [class.error-text]="f.password.errors?.hasNumber">
                       At least one numeric
                     </li>
-                    <li [class.error-text]="
+                    <li
+                      [class.error-text]="
                         f.password.errors?.minlength ||
                         f.password.errors?.required
-                      ">
+                      "
+                    >
                       Minimum 8 characters
                       {{
-                      f.password.errors?.minlength
-                      ? "(" +
-                      f.password.errors?.minlength.actualLength +
-                      "/" +
-                      f.password.errors?.minlength.requiredLength +
-                      ")"
-                      : ""
+                        f.password.errors?.minlength
+                          ? "(" +
+                            f.password.errors?.minlength.actualLength +
+                            "/" +
+                            f.password.errors?.minlength.requiredLength +
+                            ")"
+                          : ""
                       }}
                     </li>
                   </ul>
@@ -62,7 +78,11 @@
             </div>
           </div>
           <div class="p-col-12">
-            <p-button label="Login" (onClick)="submitForm()" [disabled]="disableSubmit || !loginForm.valid">
+            <p-button
+              label="Login"
+              (onClick)="submitForm()"
+              [disabled]="disableSubmit || !loginForm.valid"
+            >
             </p-button>
           </div>
           <div class="p-col-12 t-align-center">
